Added 1.9.3 to list of Travis allowed failures

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,8 @@ rvm:
 - jruby
 matrix:
   allow_failures:
-  - rvm: jruby
+  - rvm:
+    - jruby
+    - 1.9.3
 install: gem install rspec
 script: rake spec
