--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,13 @@
 sudo: false
 cache: bundler
 language: ruby
+
+bundler_args: --jobs 3 --retry 3
+before_install:
+  - "rm ${BUNDLE_GEMFILE}.lock"
+  - "travis_retry gem update --system"
+  - "travis_retry gem install bundler"
+
 rvm:
 - 2.5.1
 - 2.0.0
@@ -18,9 +25,7 @@ matrix:
   - rvm: jruby
   - rvm: ruby-head
   - rvm: 1.9.3
-before_install:
-  - gem uninstall -v '>= 2' -i $(rvm gemdir)@global -ax bundler || true
-  - gem install bundler -v '< 2'
+
 install:
   - bundle install --retry=3
 script:
