--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ language: ruby
 bundler_args: --jobs 3 --retry 3
 before_install:
   - "rm ${BUNDLE_GEMFILE}.lock"
-  - "travis_retry gem update --system"
+  - "travis_retry gem update --system ${RUBYGEMS_VERSION}"
   - "travis_retry gem install bundler"
 
 rvm:
