--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ bundler_args: --jobs 3 --retry 3
 before_install:
   - "rm ${BUNDLE_GEMFILE}.lock"
   - gem update --no-document --system 2.4.8
-  - gem install bundler
+  - gem install bundler -v '< 2'
 
 rvm:
 - 2.5.1
@@ -27,7 +27,7 @@ matrix:
   - rvm: 1.9.3
 
 install:
-  - bundle install --retry=3
+  - bundle install
 script:
   - bundle exec rspec
   - bundle exec rubocop
