--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -3,6 +3,9 @@ AllCops:
   # RuboCop has a bunch of cops enabled by default. This setting tells RuboCop
   # to ignore them, so only the ones explicitly set in this file are enabled.
   DisabledByDefault: true
+  Exclude:
+    - Gemfile
+
 Naming/AccessorMethodName:
   Enabled: true
 Naming/AsciiIdentifiers:
