--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -50,12 +50,21 @@ jobs:
           git config user.name "MessageBird CI"
           git fetch
           git checkout ${{ github.event.pull_request.head.ref }}
+      - name: Prepare CHANGELOG
+        run: |
+          echo "${{ github.event.pull_request.body }}" | csplit -s - "/##/"
+          echo "# Changelog
+          ## ${{ env.VERSION }}
+          " >> CHANGELOG.tmp
+          grep "^*" xx01 >> CHANGELOG.tmp
+          grep -v "^# " CHANGELOG.md >> CHANGELOG.tmp
+          cp CHANGELOG.tmp CHANGELOG.md
       - name: Prepare version.rb
         run: |
           sed -i "s|STRING = '[^']*'|STRING = '${{ env.VERSION }}'|" lib/messagebird/version.rb
       - name: Commit changes
         run: |
-          git add lib/messagebird/version.rb
+          git add CHANGELOG.md lib/messagebird/version.rb
           git commit -m "Bump to version ${{ env.VERSION }}"
       - name: Push
         run: git push
